[gd_scene load_steps=3 format=3 uid="uid://omflo1o5728d"]

[ext_resource type="Texture2D" uid="uid://c3bh46g8hph47" path="res://Style/Images/Enemys/Boss_1.png" id="1_dcrsh"]
[ext_resource type="Script" path="res://Enemies/Boss_fase_1/Boss_fase_1.gd" id="1_tts7g"]

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_tts7g")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(6, 4)
scale = Vector2(1.644, 1.5)
texture = ExtResource("1_dcrsh")
hframes = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(33, 4)
scale = Vector2(1.6, 1.46)
polygon = PackedVector2Array(0, 5.33333, -7.29927, 14.6667, -15.8151, 16, -26.764, 14.6667, -30.4136, 10, -31.0219, 8, -32.2384, 4.66667, -25.5474, -2.66667, -27.9805, -4, -31.6302, -4, -33.455, -5.33333, -33.455, -8.66667, -29.1971, -11.3333, -27.3723, -14.6667, -24.3309, -16.6667, -19.4647, -16, -16.4234, -12.6667, -15.2068, -10, -15.8151, -6, -17.6399, -0.666667, -12.1655, -0.666667, -6.691, 1.33333, -4.25791, 2.66667, -1.82482, 3.33333)

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitBox"]
position = Vector2(34, 4)
scale = Vector2(1.644, 1.5)
polygon = PackedVector2Array(0, 5.33333, -7.29927, 14.6667, -15.8151, 16, -26.764, 14.6667, -30.4136, 10, -31.0219, 8, -32.2384, 4.66667, -25.5474, -2.66667, -27.9805, -4, -31.6302, -4, -33.455, -5.33333, -33.455, -8.66667, -29.1971, -11.3333, -27.3723, -14.6667, -24.3309, -16.6667, -19.4647, -16, -16.4234, -12.6667, -15.2068, -10, -15.8151, -6, -17.6399, -0.666667, -12.1655, -0.666667, -6.691, 1.33333, -4.25791, 2.66667, -1.82482, 3.33333)

[node name="BulletPoint1" type="Node2D" parent="."]
position = Vector2(-16, 40)

[node name="BulletPoint2" type="Node2D" parent="."]
position = Vector2(24, 40)

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
